# Altseed2

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  Readme.md  azure-pipelines.yml  ccpp.yml  docker-compose.yml
.ci/: check_format.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  task.md
cmake/: ClangFormat.cmake  ClangTidy.cmake
core/: CMakeLists.txt
core/src/: AutoGeneratedCoreWrapper.cpp  BaseObject.cpp  BaseObject.h  CMakeLists.txt  Configuration.cpp  Configuration.h  Core.cpp  Core.h  FPS.cpp  FPS.h  Scene.h  StdIntCBG.h  Wrapper.cpp
core/src/Common/: Array.h  Assertion.h  BinaryReader.h  BinaryWriter.h  HashHelper.h  Int8Array.h  Miscs.h  PlatformIncludes.h  Profiler.cpp  Profiler.h  Resource.h  ResourceContainer.cpp  ResourceContainer.h  Resources.cpp  Resources.h  StringHelper.h  ThreadSafeMap.h
core/src/Graphics/: BatchRenderer.cpp  BatchRenderer.h  Buffer.cpp  Buffer.h  BuildinShader.cpp  BuildinShader.h  BuiltinShader.cpp  BuiltinShader.h  Camera.cpp  Camera.h  Color.cpp  Color.h  CommandList.cpp  CommandList.h  ComputePipelineState.cpp  ComputePipelineState.h  Font.cpp  Font.h  FrameDebugger.cpp  FrameDebugger.h  Graphics.cpp  Graphics.h  ImageFont.cpp  ImageFont.h  LLGIWindow.cpp  LLGIWindow.h  Material.cpp  Material.h  RenderTexture.cpp  RenderTexture.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  Texture2D.cpp  Texture2D.h  TextureBase.cpp  TextureBase.h
core/src/Graphics/PostEffect/: Downsample_PS.h  GaussianBlur_PS.h  GrayScale_PS.h  HighLuminance_PS.h  LightBloom_PS.h  Sepia_PS.h  TextureMix_PS.h
core/src/Graphics/Renderer/: CullingSystem.cpp  CullingSystem.h  IndexBuffer.cpp  IndexBuffer.h  Rendered.cpp  Rendered.h  RenderedCamera.cpp  RenderedCamera.h  RenderedEffect.cpp  RenderedEffect.h  RenderedGUI.cpp  RenderedGUI.h  RenderedIBPolygon.cpp  RenderedIBPolygon.h  RenderedPolygon.cpp  RenderedPolygon.h  RenderedSprite.cpp  RenderedSprite.h  RenderedText.cpp  RenderedText.h  Renderer.cpp  Renderer.h
core/src/Graphics/ShaderCompiler/: ResourceLimits.cpp  ResourceLimits.h  ShaderCompiler.cpp  ShaderCompiler.h  ShaderTranspiler.cpp  ShaderTranspiler.h
core/src/IO/: BaseFileReader.cpp  BaseFileReader.h  File.cpp  File.h  FileRoot.cpp  FileRoot.h  PackFile.cpp  PackFile.h  PackFileReader.cpp  PackFileReader.h  StaticFile.cpp  StaticFile.h  StreamFile.cpp  StreamFile.h
core/src/Input/: ButtonState.h  Cursor.cpp  Cursor.h  HID.cpp  HID.h  Joystick.cpp  Joystick.h  JoystickMapping.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
core/src/Logger/: Log.cpp  Log.h
core/src/Math/: Easing.cpp  Easing.h  MathTemplate.h  Matrix33F.cpp  Matrix33F.h  Matrix33I.cpp  Matrix33I.h  Matrix44F.cpp  Matrix44F.h  Matrix44I.cpp  Matrix44I.h  RectF.cpp  RectF.h  RectI.cpp  RectI.h  Vector2DF.cpp  Vector2DF.h  Vector2DI.cpp  Vector2DI.h  Vector2F.cpp  Vector2F.h  Vector2I.cpp  Vector2I.h  Vector3DF.cpp  Vector3DF.h  Vector3DI.cpp  Vector3DI.h  Vector3F.cpp  Vector3F.h  Vector3I.cpp  Vector3I.h  Vector4DF.cpp  Vector4DF.h  Vector4DI.cpp  Vector4DI.h  Vector4F.cpp  Vector4F.h  Vector4I.cpp  Vector4I.h
core/src/Media/: MediaPlayer.cpp  MediaPlayer.h
core/src/Media/Platform/: MediaPlayer_AVF.h  MediaPlayer_AVF.mm  MediaPlayer_FFmpeg.cpp  MediaPlayer_FFmpeg.h  MediaPlayer_Impl.h  MediaPlayer_WMF.cpp  MediaPlayer_WMF.h  MediaPlayer_WMV.cpp  MediaPlayer_WMV.h
core/src/Physics/Collider/: Box2DHelper.cpp  Box2DHelper.h  CircleCollider.cpp  CircleCollider.h  Collider.cpp  Collider.h  EdgeCollider.cpp  EdgeCollider.h  PolygonCollider.cpp  PolygonCollider.h  RectangleCollider.cpp  RectangleCollider.h  ShapeCollider.cpp  ShapeCollider.h
core/src/Platform/: FileSystem.cpp  FileSystem.h  FileSystemLinux.cpp  FileSystemLinux.h  FileSystemMac.cpp  FileSystemMac.h  FileSystemWin.cpp  FileSystemWin.h
core/src/Sound/: Sound.cpp  Sound.h  SoundMixer.cpp  SoundMixer.h
core/src/System/: SynchronizationContext.cpp  SynchronizationContext.h
core/src/Tool/: AutoGenerateTool.cpp  Tool.cpp  Tool.h
core/src/Tool/Platform/: ImGuiPlatform.h  ImGuiPlatformDX12.h  ImGuiPlatformMetal.h  ImGuiPlatformMetal.mm  ImGuiPlatformVulkan.cpp  ImGuiPlatformVulkan.h
core/src/Window/: Window.cpp  Window.h  WindowModule.cpp  WindowModule.h  WindowObject.h
core/test/: BaseObject.cpp  CMakeLists.txt  ComputeShader.cpp  Configuration.cpp  Core.cpp  Easing.cpp  FPS.cpp  File.cpp  FileSystem.cpp  Font.cpp  Graphics.cpp  Joystick.cpp  Keyboard.cpp  Log.cpp  Mouse.cpp  Movie.cpp  Physics.cpp  PostEffect.cpp  Profiler.cpp  ShaderCompiler.cpp  Sound.cpp  TestHelper.cpp  TestHelper.h  Texture2D.cpp  Tool.cpp  Window.cpp  joystick.cpp  main.cpp
documents/development/: CoreCodingRule_Ja.md  CoreCodingRule_ja.md  HowToBuild_Ja.md  HowToConvertVideo.md  HowToDevelop_Ja.md  LibraryAndTools_ja.md  MeetingFlow_Ja.md  Readme.md
scripts/: CMakeCache.txt  GenerateProjects.bat  GenerateProjects.sh  GenerateProjects_ClangFormat.bat  GenerateProjects_ClangFormat_Linux.sh  GenerateProjects_ClangFormat_Mac.sh  GenerateProjects_ClangTidy.sh  GenerateProjects_Linux.sh  GenerateProjects_Mac.sh  GenerateProjects_Sanitizer_MSVC.bat  GenerateProjects_x64.bat  GenerateProjects_x64_LLVM.bat  GenerateWrapper.bat  Pull.bat  UpdateCBG.bat  UpdateLLGI.bat  UpdateSubmodules.sh  copy_cbg.py  docker-entrypoint.sh  encode_to_utf8sig.py  generate_cbg_definition.py  generate_tool.py  generate_wrapper.py  requirements.txt  setup.py  temp.h  update_all_submodules.py
scripts/bindings/: __init__.py  auto_generate_define.py  common.json  common.py  core.json  core.py  define.py  desc.json  desc_media.json  desc_profiler.json  graphics.json  graphics.py  input.json  input.py  io.json  io.py  logger.json  logger.py  math.py  physics.json  physics.py  profiler.json  sound.json  sound.py  tool.py  window.json  window.py
scripts/wrapper/: definitions.py
